[tool.poetry]
name = "analysis_pt_price_is_right"
version = "0.1.0"
description = ""
authors = ["Rui Silva <ruisilva@cmu.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23"
matplotlib = "^3.1"
tqdm = "^4.43"
pandas = "^1.0"
seaborn = "^0.10.0"
yapf = "^0.29.0"
aiohttp = "^3.6"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
